deploy/hypershift-sc-kube-state-metrics/060-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: hypershift-observability
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  clusterIP: None
  ports:
  - name: http-metrics
    port: 8080
    targetPort: http-metrics
  - name: telemetry
    port: 8081
    targetPort: telemetry
  selector:
    app.kubernetes.io/name: kube-state-metrics
